# python-booking

./: .flake8  .gitignore  README.md  TODO.md  mypy.ini  pyproject.toml  pytest.ini  tox.ini
.github/workflow/: ci.yml
.github/workflows/: ci.yml  tests.yml
booking/: helpers.py
booking/application/: dto.py  main.py
booking/applications/http/: __init__.py  bookings.py  dto.py  free.py  models.py  resources.py
booking/data/: memory.py
booking/data/memory/: __init__.py  booking.py  resource.py
booking/domain/: errors.py  models.py  repositories.py  repository.py  services.py
booking/domain/repositories/: __init__.py  bookings.py  common.py  resources.py
booking/domain/services/: __init__.py  bookings.py  resources.py
tests/: conftest.py  test_availability.py  test_bookings.py  test_resources.py
